# solana_rust_tweet

./: .gitignore  Anchor.toml  Cargo.toml  README.md
client/: client.ts  utils.ts
client/rust/: Cargo.toml
client/rust/src/: main.rs
programs/mySolanaProgram/: Cargo.toml
programs/mySolanaProgram/src/: lib.rs
programs/solanaTwitter/: Cargo.toml
programs/solanaTwitter/src/: lib.rs
tests/: mySolanaProgram.ts
