[package]
name = "client_rust"
version = "0.25.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.25.0"
anyhow = "1.0.32"
regex = "1.4.5"
serde = { version = "1.0.122", features = ["derive"] }
solana-client = "1.10.3"
solana-sdk = "1.10.3"
solana-account-decoder = "1.10.3"
thiserror = "1.0.20"
url = "2.2.2"
anchor-client = { version = "0.25.0" }
shellexpand = "2.1.0"
mySolanaProgram = { path = "/Users/omarbenharbit/solana_projects/mySolanaProgram/programs/mySolanaProgram", features = ["no-entrypoint"]  }
spl-token = "3.5.0"
