[package]
name = "mySolanaProgram"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_twitter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
spl-associated-token-account = {version = "1.1.1", features = ["no-entrypoint"]}
spl-token = {version = "3.5.0", features = [ "no-entrypoint" ]}
